<resources>
    <string name="app_name">FoodPanda</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_shop">shop</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--    右側選單    -->
    <string name="menu_order">我的訂單</string>
    <string name="menu_profile">個人檔案</string>
    <string name="menu_address">我的地址</string>
    <string name="menu_payment_method">我的付款方式</string>
    <string name="menu_voucher">我的優惠卷</string>
    <string name="menu_customer_service">客服中心</string>
    <string name="menu_invite">邀請朋友</string>

    <string name="menu_setting">設定</string>
    <string name="menu_terms_conditions">條款細則</string>
    <string name="menu_logout">登出</string>
</resources>